<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ShopDetailEntity"
            type="ru.egorkastr.x5retailtest.domain.entity.ShopDetailEntity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_shop_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <ScrollView
            android:id="@+id/fragment_shop_detail_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/std_double_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/std_margin"
                android:elevation="@dimen/std_elevation"
                app:cardCornerRadius="@dimen/std_cornder_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_number_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_number_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_number_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text='@{ShopDetailEntity.id != 0 ? Integer.toString(safeUnbox(ShopDetailEntity.id)) : ""}'
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_name_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_name_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_name_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.name}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_address_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_address_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_address_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.address}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_detail_profit_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_profit_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_detail_profit_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.annualProfit}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_detail_latitude_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_latitude_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_detail_latitude_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.latitude}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_detail_longitude_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_longitude_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_detail_longitude_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.longitude}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_detail_open_date_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_open_date_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_detail_open_date_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.openDate}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/shop_detail_state_header"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginStart="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|start"
                            android:text="@string/shop_detail_state_header"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                        <TextView
                            android:id="@+id/shop_detail_state_value"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginEnd="@dimen/std_margin"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@{ShopDetailEntity.state.description}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="1" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>